# laboratory

./: .gitignore  Pipfile  README.rst  app.py  components.py  config.py  custom copy.py  custom.py  data.py  drivers.py  drivers_old.py  example_control.xlsx  index.py  laboratory.py  multiday_test.xlsx  navbar.py  plotting.py  pyproject.toml  requirements.txt  test copy.py  utils.py
assets/css/: sb-admin-2.css
docs/: conf.py  index.rst
docs/documents/: Gas Check Spreadsheet.xlsx  Proficiency Checklist.docx  Risk Assessment.docx  Safe Operating Procedure.docx
docs/guide/: SOPs.rst  calibration.rst  documents.rst  experiment.rst  getting_started.rst  instrument_control.rst  instruments.rst  safety.rst  troubleshoot.rst
docs/source/: calibration.rst  conf.py  config.rst  data.rst  drivers.rst  index.rst  laboratory.drivers.rst  laboratory.rst  laboratory.utils.rst  modules.rst  plot.rst  utils.rst
drivers/: daq.py  furnace.py  lcr.py  mfc.py  motor.py  other.py
laboratory/: __init__.py  calibration.py  config.py  drivers.py  example_control.xlsx  laboratory.py  modelling.py  multiday_test.xlsx  open_furnace_correction.pkl  plot.py  plotting.py  processing.py  setup.py  widgets.py
laboratory/calibration/: calibration.py
laboratory/drivers/: __init__.py  daq.py  furnace.py  gas_controllers.py  instruments.py  lcr.py  mfc.py  motor.py
laboratory/utils/: calibrate.py  calibration.py  data.py  exceptions.py  loggers.py  notifications.py  (+3 more)
utils/: calibrate.py  loggers.py
views/: __init__.py  dashboard.py  experiment.py  home.py  load.py  modelling.py  setup.py
(+33 files in other folders)
