[tool.poetry]
name = "laboratory"
version = "0.1.0"
description = "Controlling software for the Conductive Earth Laboratory at the University of Adelaide."
authors = ["SSJenny90 <samuel.scott.jennings@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
alicat = "^0.2.10"
matplotlib = "^3.3.3"
pyserial = "^3.4"
numpy = "^1.19.4"
pandas = "^1.1.4"
scipy = "^1.5.4"
minimalmodbus = "^1.0.2"
tqdm = "^4.51.0"
impedance = "^1.0.0"
statsmodels = "^0.12.1"
dash = "^1.17.0"
dash-bootstrap-components = "^0.10.7"
dash-auth = "^1.4.1"
PyVISA = "^1.11.3"
dash-daq = "^0.5.0"
jupyter = "^1.0.0"
Flask = "^1.1.2"
Flask-Caching = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
